--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,9 +25,9 @@ $on-laptop:        1000px;
 
 @import 'variables';
 @import 'google-fonts';
-@import 'footer-social';
-@import 'projects';
+// @import 'footer-social';
+// @import 'projects';
 @import 'profile';
-@import 'footer';
+// @import 'footer';
 @import 'style';
-@import 'syntax-highlighting';
+// @import 'syntax-highlighting';
