--- a/assets/css/_sass/google-fonts.scss
+++ b/assets/css/_sass/google-fonts.scss
@@ -1,1 +1,222 @@
+/* Стили для шрифта Noto Serif Georgian */
+.noto-serif-georgian-1 {
+  font-family: "Noto Serif Georgian", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
+/* Стили для шрифта Noto Sans Georgian */
+.noto-sans-georgian-1 {
+  font-family: "Noto Sans Georgian", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100; /* Пример значения веса шрифта */
+  font-style: normal;
+  font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+
+.noto-sans-georgian-w100 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 100; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-w200 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 200; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-w300 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 300; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-w400 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-w500 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 500; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-w600 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 600; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-w700 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 700; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-w800 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 800; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-w900 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 900; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-w100 {
+  font-family: "Noto Serif Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 100; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-w200 {
+  font-family: "Noto Serif Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 200; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-w300 {
+  font-family: "Noto Serif Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 300; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-w400 {
+  font-family: "Noto Serif Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-w500 {
+  font-family: "Noto Serif Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 500; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-w600 {
+  font-family: "Noto Serif Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 600; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-w700 {
+  font-family: "Noto Serif Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 700; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-w800 {
+  font-family: "Noto Serif Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 800; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-w900 {
+  font-family: "Noto Serif Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 900; /* Пример значения веса шрифта */
+  font-style: normal;
+ // font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+
+.noto-sans-georgian-v62 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+  font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-v75 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+  font-variation-settings: "wdth" 75; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-v87 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+  font-variation-settings: "wdth" 87.5; /* Пример значения ширины шрифта */
+}
+.noto-sans-georgian-v100 {
+  font-family: "Noto Sans Georgian", sans;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+  font-variation-settings: "wdth" 100; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-v62 {
+  font-family: "Noto Serif Georgian", serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+  font-variation-settings: "wdth" 62.5; /* Пример значения ширины шрифта */
+}
+
+.noto-serif-georgian-v75 {
+  font-family: "Noto Serif Georgian", serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+  font-variation-settings: "wdth" 75; /* Пример значения ширины шрифта */
+}
+
+.noto-serif-georgian-v87 {
+  font-family: "Noto Serif Georgian", serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+  font-variation-settings: "wdth" 87.5; /* Пример значения ширины шрифта */
+}
+.noto-serif-georgian-v100 {
+  font-family: "Noto Serif Georgian", serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Пример значения веса шрифта */
+  font-style: normal;
+  font-variation-settings: "wdth" 100; /* Пример значения ширины шрифта */
+}
+
+.h1-serif {
+  font-family: 'Noto Serif Georgian';
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 2;
+  margin: 0;
+  // text-transform: inherit;
+}
+
+.h1-sans {
+  font-family: 'Noto Sans Georgian';
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 2;
+  margin: 0;
+  // text-transform: inherit;
+}
 
