--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,3 @@
----
-# layout: compress
----
 <!DOCTYPE html>
 <html>
 
@@ -16,17 +13,22 @@
 
         {% include favicon.html %}
 
-        {% include mathjax.html %}
 
         <!-- Load fontawesome here for faster loadtimes: https://stackoverflow.com/a/35880730/9523246 -->
         <script type="text/javascript"> (function() { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.11.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
     </head>
 
     <body>
-      
-        <h1 class="post-headline">{{site.title}}</h1>
-        <h3 class="post-description">{{site.description}}</h3>
-        {% include navigation.html %}
+        <section class="container">
+          <div class="person">
+            <img src="{{site.baseurl}}/assets/images/profile.jpg" alt="">
+            <h1 class="noto-serif-georgian-w500">{{site.title}}</h1>
+            <h3 class="noto-sans-georgian-w300">{{site.description}}</h3>
+          </div>
+          <div class="menu">
+            {% include navigation.html %}
+          </div>
+        </section> 
         <main>
             <article>
                 {{ content }}
@@ -36,9 +38,7 @@
         <footer>
           <p class="copy">
             <small> &copy; {{site.title}} {{ site.time | date: '%Y' }}
-                    | Powered by Jekyll and
-                    <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on {{ site.time | date_to_long_string }}
+                  
             </small>
           </p>
 
