--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -27,7 +27,6 @@ html {
 }
 
 body {
-  // height: 90%;
   font-family: $base-font-family;
   background-color: $body-bg; 
   box-shadow: 0 4px 28px 0 $box-shadow-color;
@@ -59,12 +58,13 @@ body {
       color: $sand-beige;
     }
   }
-  // height: 100vh;
-  // overflow: hidden;
   .menu {
     display: grid;
     place-items: center;
-
+    a {
+      text-decoration: none;
+      font-size: 30px;
+    }
   } 
 }
 
