--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <div class="links scroll">
     {% for link in site.navigation%}
-        <a class="noto-serif-georgian-1" href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
+        <a class="noto-sans-georgian-1" href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
     {% endfor %}
 </div>
